--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,38 +1,37 @@
 <ion-content>
-<div class="login-section ion-padding">
-  <div class="heading ion-padding">
+  <ion-header>
     <ion-icon class="main-logo" id="car-logo" name="car-outline"></ion-icon>
     <b>Car Rental</b>
-  </div>
+  </ion-header>
   <h2><b class="login-logo">Register</b></h2>
-  <div class="input-item" style="margin-bottom: 15px;">
-    <ion-label style="color: #004d40; margin-left: 10px;">Full Name</ion-label>
-    <ion-input type="text"></ion-input>
-  </div>
-  <div class="input-item" style="margin-bottom: 15px;">
-    <ion-label style="color: #004d40; margin-left: 10px;">Email</ion-label>
-    <ion-input type="email"></ion-input>
-  </div>
-  <div class="input-item" style="margin-bottom: 15px;">
-    <ion-label style="color: #004d40; margin-left: 10px;">Mobile Number</ion-label>
-    <ion-input type="number"></ion-input>
-  </div>
-  <div class="input-item" style="margin-bottom: 15px;">
-    <ion-label style="color: #004d40; margin-left: 10px;">Create Pasword</ion-label>
-    <ion-input type="password"></ion-input>
-  </div>
-  <div class="input-item">
-    <ion-label style="color: #004d40; margin-left: 10px;">Confirm Password</ion-label>
-    <ion-input type="password"></ion-input>
-  </div>
-  <!-- <ion-item>
-    <ion-label position="floating">Username</ion-label>
-  <ion-input placeholder="Enter your username">
-    <ion-icon name="person" slot="start"></ion-icon>
-  </ion-input>
-</ion-item> -->
-</div>
+  <ion-card >
+    <ion-icon style="margin-top: 0%;" name="person-outline"></ion-icon>
+    <ion-label >Full Name</ion-label>
+    <ion-input></ion-input>
+  </ion-card>
+  <ion-card >
+    <ion-icon name="mail-outline"></ion-icon>
+    <ion-label >Email</ion-label>
+    <ion-input></ion-input>
+  </ion-card>
+  <ion-card >
+    <ion-icon name="phone-portrait-outline"></ion-icon>
+    <ion-label >Mobile Number</ion-label>
+    <ion-input></ion-input>
+  </ion-card>
+  <ion-card >
+ <ion-icon name="lock-closed-outline"></ion-icon>
+    <ion-label >Create Password</ion-label>
+    <ion-input></ion-input>
+  </ion-card>
+  <ion-card >
+ <ion-icon name="lock-closed-outline"></ion-icon>
+    <ion-label >Confirm Password</ion-label>
+    <ion-input fill="solid"></ion-input>
+  </ion-card>
 <input type="checkbox" style="margin-left: 18px; border: 6px solid #004d40; font-size: 22em;"/>
 <span style="color: #004d40; margin-left: 8px">by creating an account you agree to our terms &nbsp; and conditions and privacy policy</span> 
-<ion-button expand="full">Registerzzzzzzzzz</ion-button>
+<ion-button expand="full">Register</ion-button>
 </ion-content>
+
+
