--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,29 +1,30 @@
-<ion-content >
-  <div class="login-section ion-padding">
-    <div class="heading ion-padding">
+<ion-content class="ion-padding">
+    <ion-header>
       <ion-icon class="main-logo" id="car-logo" name="car-outline"></ion-icon>
       <b>Car Rental</b>
-    </div>
+    </ion-header>
     <h2><b class="login-logo">Login</b></h2>
     <div class="ion-padding login-page" >
-    <div class="input-item" style="margin-bottom: 10px;">
-      <ion-label position="floating" style="color: #004d40;">Email</ion-label>
-      <ion-input type="text" style="height: 20px;"></ion-input>
-      <ion-icon name="mail-outline"></ion-icon>
-    </div>
-    <div class="input-item" >
-        <ion-label position="floating" style="color: #004d40;">Password</ion-label>
-        <ion-input type="password"></ion-input>
-    </div>
+        <ion-card class="custom-card">
+          <ion-icon name="mail-outline" class="custom-icon"></ion-icon>
+          <ion-label position="floating" class="custom-label">Email</ion-label>
+          <ion-input class="custom-input"></ion-input>
+        </ion-card>
+
+        <ion-card class="custom-card">
+          <ion-icon name="lock-closed-outline"></ion-icon>
+          <ion-label position="floating" class="custom-label">Password</ion-label>
+          <ion-input class="custom-input"></ion-input>
+        </ion-card>
+
     </div>
   
     <div>
     <!-- <ion-checkbox slot="start" style="margin-right: 5px; background-color: aliceblue;"></ion-checkbox> -->
     <input class="custom-checkbox" style="margin-right: 5px; border: 6px solid #004d40;" type="checkbox" style="font-size: 22em;"/>
-    <ion-label class="remember-label" style="color: #004d40;">Remember Password</ion-label>
-    <ion-label class="forget-label" style="margin-left:40px; color: #004d40;" slot="end">Forget Password</ion-label>
+    <ion-label class="remember-label" style="font-size: medium; color: #004d40;">Remember Password</ion-label>
+    <ion-label class="forget-label" style="font-size: medium; margin-left:30px; color: #004d40;" slot="end">Forget Password</ion-label>
   </div>
-</div>
 <ion-button expand="full">Login</ion-button>
 
 <div class="divider"></div>
