--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -82,3 +82,26 @@
   input[type=checkbox] {
     accent-color: rgb(255, 255, 255);
   }
+  ion-card{
+    background-color: #ffffff;}
+  ion-label,ion-icon {
+    color: #004d40;
+    text-align: center;
+    font-size: large;
+    margin-left: 8px;
+  }
+  ion-input{
+    color: #000;
+    margin-left: 8px;
+    margin-bottom: 13px;
+    font-size: large;
+  }
+  ion-card{
+    height: 50%;;
+  }
+  ion-header {
+    background-color: #004d40;
+    width: full;
+    height: 150px;
+    border-radius: 25px;
+  }
