--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -3,7 +3,6 @@
     width: full;
     height: 150px;
     border-radius: 25px;
-    margin: auto;
   }
   ion-content {
     --background: #ffffff; 
@@ -40,3 +39,30 @@
   ion-button:hover{
     --background: #000000;
   }
+  ion-card{
+    background-color: #ffffff;}
+  ion-label,ion-icon {
+    color: #004d40;
+    text-align: center;
+    font-size: large;
+    margin-left: 8px;
+  }
+  ion-input{
+    color: #000;
+  }
+  ion-card{
+    height: 40px
+  }
+  b{
+    font-size: medium;
+  }
+  h2{
+    margin-bottom: 30px;
+  }
+  ion-header {
+    background-color: #004d40;
+    width: full;
+    height: 150px;
+    border-radius: 25px;
+  }
+ 
