--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,30 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content>
+    <ion-header>
+      <ion-icon class="main-logo" id="car-logo" name="car-outline"></ion-icon>
+      <b>Car Rental</b>
+    </ion-header>
+    <h2><b class="login-logo">verification</b></h2>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
+    <p>Enter 4 digit verification code. we just sent you on +91 1234567890</p>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+    <p style="margin-top: 10px;"><b>Enter code here</b></p>
+
+    <ion-row class="otp-box">
+      <ion-col>
+       <ion-input required maxLength="1">
+       </ion-input>
+       <ion-input required maxLength="1">
+       </ion-input>
+       <ion-input required maxLength="1">
+       </ion-input>
+       <ion-input required maxLength="1">
+       </ion-input>
+      </ion-col>
+    </ion-row>
+    
+   
+    
+    <ion-button expand="full"><b>Continue</b></ion-button>
+     
 </ion-content>
+
